# EmbeddedSystems

./: README.md
assignment3/src/: CMakeLists.txt
assignment3/src/dou_arith_in_cpp/: add_dou.cpp  mul_dou.cpp  sub_dou.cpp
assignment3/src/int_arith_in_c/: div_int.c  sub_int.c
assignment4/sharedlib/: CMakeLists.txt  Dockerfile
assignment4/sharedlib/duo-toolchain-arm64/riscv64-unknown-linux-musl/: build.log.bz2
assignment4/sharedlib/duo-toolchain-arm64/riscv64-unknown-linux-musl/libexec/gcc/riscv64-unknown-linux-musl/13.2.0/: g++-mapper-server  (+1 more)
assignment4/sharedlib/duo-toolchain-arm64/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/lib/ldscripts/: elf32briscv_ilp32.xce  elf32briscv_ilp32.xdw  elf32briscv_ilp32f.xse  elf32lriscv.xn  elf32lriscv_ilp32f.xw  elf64briscv.xdce  elf64briscv.xde  elf64briscv.xs  elf64briscv.xsc  elf64briscv.xw  elf64briscv_lp64.xdce  elf64briscv_lp64.xdwe  elf64briscv_lp64.xn  elf64briscv_lp64.xsw  elf64briscv_lp64f.xbn  elf64briscv_lp64f.xdc  elf64briscv_lp64f.xdce  elf64briscv_lp64f.xdwe  elf64briscv_lp64f.xe  elf64briscv_lp64f.xsc  elf64lriscv.xc  elf64lriscv.xdce  elf64lriscv.xde  elf64lriscv.xs  elf64lriscv_lp64.xbn  elf64lriscv_lp64.xce  elf64lriscv_lp64.xe  elf64lriscv_lp64.xse  elf64lriscv_lp64f.x  elf64lriscv_lp64f.xdw  elf64lriscv_lp64f.xdwe  elf64lriscv_lp64f.xs  elf64lriscv_lp64f.xwe
assignment4/sharedlib/duo-toolchain-arm64/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/sysroot/lib/: libgcc_s.so.1
assignment4/sharedlib/duo-toolchain-arm64/riscv64-unknown-linux-musl/share/gdb/: gdbinit
assignment4/sharedlib/include/: CMakeLists.txt  int_arithmetic.h
assignment4/sharedlib/src/: main.cpp
assignment4/sharedlib/src/dou_arith_in_cpp/: div_dou.cpp
assignment4/sharedlib/src/int_arith_in_c/: add_int.c  mul_int.c
morse_code_project/: CMakeLists.txt  Makefile  README.md  SDK.dockerfile  build.py  milkv_duo.cmake
morse_code_project/lib/: CMakeLists.txt  a.out  blink.c  blink.h  cv1800b.h  devmem.c  devmem.h  translate.c  translate.h
morse_code_project/src/: CMakeLists.txt  main.c
morse_code_project/unity/: CMakeLists.txt  test.c
(+175 files in other folders)
